@@ -14,7 +14,7 @@ Contents of CTF section .ctf:
 #...
     Compilation unit name: .*slice.c
 #...
-    Data object section:	.* \(0x4 bytes\)
+    Data object section:	.* \(0x[1-9a-f][0-9a-f]* bytes\)
     Type section:	.* \(0xd0 bytes\)
     String section:	.*
 #...
